kube-ngnix/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: test.local
    http:
      paths:      
      - path: /
        backend:
          serviceName: my-nginx
          servicePort: 80
